--- a/Tarea_12/Reporte.tex
+++ b/Tarea_12/Reporte.tex
@@ -69,7 +69,7 @@ El objetivo de esta tarea es resolver una serie de problemas seleccionados del l
 \section{Ejercicio 1, página 393}
 
 
-Sea $Z_{1}, Z_{2}, ..., Z_{N}$ describen un proceso de ramificación en el que cada padre tiene  $j$ ramas con probabilidad $p_{j}$. Encuentre la probabilidad  $d$ de que el proceso finalmente se extinga
+Sea $Z_{1}, Z_{2}, ..., Z_{N}$ describa un proceso de ramificación en el que cada padre tiene  $j$ ramas con probabilidad $p_{j}$. Encuentre la probabilidad  $d$ de que el proceso finalmente se extinga
 \\
 (a) $p_{0} = \frac{1}{2}, p_{1} = \frac{1}{4}, p_{2} = \frac{1}{4}$.\\
 \\
