--- a/Tarea_14/Reporte.tex
+++ b/Tarea_14/Reporte.tex
@@ -151,12 +151,12 @@ Durante el día de hoy se han entregado n = 150 paquetes. Es decir, tenemos una 
 variable.
 Por el teorema del límite central sabemos que la media muestral se comporta como una normal de
 esperanza 25 y desviación típica:
-$\frac{7}{\sqrt{150} = 0.571}.$
+$\frac{7}{\sqrt{150}} = 0.571.$
 
 Con estos datos podemos usar la  aproximación a la normal con nuestra variable $p$ para calcular la probabilidad buscada de la siguiente manera:
 \[ P(20 \leq p \leq 25) = P(\frac{20-25}{0.571} \leq \frac{p-25}{0.571} \leq \frac{25-25}{0.571}).\]
 Que es igual a la siguiente probabilidad:
-\[ P(\frac{20-25}{0.572} \leq Y \leq P(\frac{20-25}{0.572}) = P(-8.74 \leq Y \leq 0) = P(Y \leq 0) - P(Y \leq -8.74) = 0.5 - 0.\]
+\[ P(\frac{20-25}{0.572} \leq Y \leq P(\frac{25-25}{0.572}) = P(-8.74 \leq Y \leq 0) = P(Y \leq 0) - P(Y \leq -8.74) = 0.5 - 0.\]
 
 \printbibliography[title={Referencias}]
 \end{document}
