--- a/ProyectoFinal/Reporte.tex
+++ b/ProyectoFinal/Reporte.tex
@@ -131,7 +131,7 @@ El segundo es la varianza:
 el tercero la desviación estándar:
 \[ \sigma = \sqrt{\sigma^{2}} = \sqrt{\frac{\Sigma (x_{i}-\mu)^{2}}{n}}.\]
 
-En las figuras \ref{fig:casoMexico},\ref{fig:casoCanada},\ref{fig:RegresionUSA},\ref{fig:casoBrasil}, se grafican la incidencia anual de defunciones en cada uno de los países analizados. 
+En las figuras \ref{fig:casoMexico},\ref{fig:casoCanada},\ref{fig:casoUsa},\ref{fig:casoBrasil}, se grafican la incidencia anual de defunciones en cada uno de los países analizados. 
 Como se puede observar, el número de fallecidos ha ido aumentando cada año, por lo que hay una relación entre el año y número de defunciones. 
 
 
