--- a/ProyectoFinal/Reporte.tex
+++ b/ProyectoFinal/Reporte.tex
@@ -200,7 +200,7 @@ Donde:
 \end{itemize}
 
 \section{Resultados}
-A continuación se muestran los resultados obtenidos por medio de la regresión lineal para la estimación de las muertes posibles en México para el año 2020 ver \ref{fig:RegresionMexico}.
+A continuación se muestran los resultados obtenidos por medio de la regresión lineal para la estimación de las muertes posibles en México para el año 2020 ver figura \ref{fig:RegresionMexico}.
 Aunque se observa en la gráfica de regresión lineal 3 puntos un poco fuera de nuestro error estándar, otros 5 caen dentro de nuestro error estándar por lo que la estimación puede ser un número confiable, de aquí obtuvimos el error estándar que es $\pm$ 8892, por lo que los valores esperados estarán en el intervalo [748072,765856].
 Donde nuestro valor mínimo es cercano a nuestro valor reportado oficialmente el año anterior.
 
