--- a/ProyectoFinal/Reporte.tex
+++ b/ProyectoFinal/Reporte.tex
@@ -268,7 +268,7 @@ Para el error estándar aquí calculamos $\pm$ 5834 y el valor central en un
 \section{Conclusión}
 
 Para el caso de Brasil y los Estados Unidos, los resultados muestran una pequeña inconsistencia sin embargo la regresión puede ser un muy buen dato, para Canadá la regresión lineal no parece ser la mejor forma de calcular el valor estimado pues los valores parecen llevar una tendencia al alza, por lo que nuestro valor quedaría un poco corto, para el caso específico de México también la regresión lineal no se muestra muy confiable, especialmente por el último año en donde las muertes parecen haberse disparado, esto puede ser debido al aumento de muertes por asesinatos, por lo que esperamos que el valor estimado de muertes seria el límite superior de nuestro intervalo. Se ha reportado que en México el número de muertes por accidentes también ha aumentado este año 2020 por lo que sería también conveniente hacer la comparación con el número de muertes eliminando este dato de la cifra total de muertos, pudiendo de esta manera, obtener el número de muertes en exceso que pudo haber causado el Covid en 2020, en México y en los otros países.
-Solo faltaría comparar con el dato final que se publica hasta en Marzo de 2021, actualmente el Covid se convirtió en la causa número 2 en México en 2020.
+Solo faltaría comparar con el dato final que se publica hasta en Marzo de 2021, actualmente el Covid se convirtió en la causa número 2 de muertes en México en 2020.
 
 \printbibliography[title={Referencias}]
 \end{document}
